# processing-job-sample

./: LICENSE  README.md  launcher.sh  main_routine.py  main_routine_local.py  pyproject.toml  requirements.txt  trigger.py
input/: sample_msg.txt
src/processing_job_sample/: hello_world.py  processing.py
