[tool.poetry]
name = "processing-job-sample"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    "siida36",
]
packages = [
    { include = "processing_job_sample", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
s3pathlib = "^2.3.1"
sagemaker = "^2.231.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
